cmake_minimum_required(VERSION 3.23)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(blink LANGUAGES C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(blink blink.c)
target_link_libraries(blink pico_stdlib)
pico_add_extra_outputs(blink)
# pico_enable_stdio_usb(blink 1)
# pico_enable_stdio_uart(blink 1)

# SET (CMAKE_C_COMPILER_WORKS 1)
# SET (CMAKE_CXX_COMPILER_WORKS 1)
# SET (CMAKE_ASM_COMPILE_OBJECT)
# enable_language( C CXX ASM )